--- a/css/style.css
+++ b/css/style.css
@@ -1702,7 +1702,14 @@ Panel
 .app-action-group i.fa-sort-amount-desc,.pagination-block  i.fa-sort-amount-desc{
     transform: rotateX(180deg) rotateY(0deg);
 }
-
+.app-action-group a.range {
+    color: transparent;
+    font-size: 11px;
+	background:rgba(0, 0, 0, 0) url("../img/icons/svg/range.svg") no-repeat scroll center center;
+}
+.app-action-group a.range:hover{
+  	background-image:url("../img/icons/svg/range-hover.svg") ;
+	background-color:#120e5b;}
 
 /*----------Table Pagination-----------*/
 .pages-info {
@@ -2222,7 +2229,7 @@ Header
     content: "";
     left: 48%;
     position: absolute;
-    top: -6px;
+    top: -5px;
 }
 .user-profile-menu li {
     border-bottom: 1px solid #d8d8d8;
@@ -2231,6 +2238,16 @@ Header
     line-height: 20px;
     list-style: outside none none;
     padding: 3px 10px 10px;
+}
+.user-profile-menu li:hover {
+    background: #e0f3ff none repeat scroll 0 0;
+    color: #2991d6;
+}
+.user-profile-menu li:hover a {
+    color: #2991d6;
+}
+.user-profile-menu li:last-child {
+    border: medium none;
 }
 .user-profile-menu li a {
     color: #5c5c5c;
@@ -2305,13 +2322,30 @@ Header
     top: 0;
     width: 19px;
 }
-.language  .dropdown-list ul{ top: 18px;}
-.language .dropdown-list ul li{color: #5c5c5c;
+.language .dropdown-list ul {
+    left: 8px;
+    top: 26px;
+	overflow-y: unset;
+}
+.language .dropdown-list ul::before {
+    border-bottom: 5px dashed #d8d8d8;
+    border-left: 4px solid rgba(0, 0, 0, 0);
+    border-right: 4px solid rgba(0, 0, 0, 0);
+    content: "";
+    left: 46%;
+    position: absolute;
+    top: -5px;
+}
+.language .dropdown-list ul li {
+    color: #5c5c5c;
     display: block;
     font-size: 11px;
-    text-decoration: none;}
+    height: 30px;
+    line-height: 30px;
+    text-decoration: none;
+}
 .menu-part {
-    background: #e6e6e6 none repeat scroll 0 0;
+    background: #f8f8f8 none repeat scroll 0 0;
     height: 70px;
     position: relative;
     z-index: 9;
@@ -2323,7 +2357,7 @@ Header
     height: 30px;
     position: absolute;
     width: 100%;
-    z-index: 9999;
+    z-index: 9;
 }
 .block-container {
     padding-left: 80px;
@@ -2371,16 +2405,95 @@ Header
 .mobile-logo {
     display: none;
 }
-.menu {
-    height: 40px;
+/*----------Menu-----------*/
+ 
+.dropdown-menu > li.kopie > a {
+    padding-left:5px;
 }
-.navbar1.clearfix {
-    height: 40px;
+ 
+.dropdown-submenu {
+    position:relative;
 }
-.menu li {
-    list-style: outside none none;
+.dropdown-submenu .dropdown-menu {
+   top:0;left:100%;
+   margin-top:-6px;margin-left:-1px;
+  border-radius:0;
+ }
+  
+.dropdown-submenu > a::after {
+    border-color: transparent transparent transparent #333;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    content: " ";
+    display: block;
+    height: 0;
+    position: absolute;
+    right: 15px;
+    top: 13px;
+    width: 0;
 }
-.menu li a {
+ 
+.dropdown-submenu:hover>a:after {
+    border-left-color:#555;
+ }
+
+.dropdown-menu > li > a:hover, .dropdown-menu > .active > a:hover {
+  text-decoration: underline;
+}  
+  
+@media (max-width: 767px) {
+  .navbar-nav  {
+     display: inline;
+  }
+  .navbar-default .navbar-brand {
+    display: inline;
+  }
+  .navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
+  }
+  .navbar-default .navbar-nav .dropdown-menu > li > a {
+    color: red;
+    background-color: #ccc;
+    border-radius: 4px;
+    margin-top: 2px;   
+  }
+   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+     color: #333;
+   }
+   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+     background-color: #ccc;
+   }
+
+   .navbar-nav .open .dropdown-menu {
+     border-bottom: 1px solid white; 
+     border-radius: 0;
+   }
+  .dropdown-menu {
+      padding-left: 10px;
+  }
+  .dropdown-menu .dropdown-menu {
+      padding-left: 20px;
+   }
+   .dropdown-menu .dropdown-menu .dropdown-menu {
+      padding-left: 30px;
+   }
+   li.dropdown.open {
+    border: 0px solid red;
+   }
+
+}
+ 
+@media (min-width: 768px) {
+  ul.nav li:hover > ul.dropdown-menu {
+    display: block;
+  }
+  #navbar {
+    text-align: center;
+  }
+}  
+
+.nav > li > a {
     border-right: 1px solid #cecece;
     color: #41484d;
     float: left;
@@ -2388,6 +2501,41 @@ Header
     line-height: 30px;
     padding: 5px 20px;
     text-transform: uppercase;
+}
+.navbar-default  li a:hover {
+    background: #2991d6 none repeat scroll 0 0;
+    color: #ffffff;
+    text-decoration: none;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+    background-color: #2991d6;
+    color: #ffffff;
+}
+.nav .open > a, .nav .open > a:focus, .nav .open > a:hover {
+     border: medium none;
+}
+.dropdown.open i, .navbar-default .navbar-nav > li > a:hover i, .navbar-default .navbar-nav > li.active a i{
+    border: 1px solid #ffffff;
+}
+.navbar-nav .caret {
+    margin-left: 5px;   margin-top: 0;
+}
+.caret {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px dashed;}
+.menu {
+    height: 40px;
+}
+.navbar-default {
+    background-color: transparent;}
+	.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse, .navbar-static-top .navbar-collapse {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover,.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover{
+    background-color: #2991d6;
+    color: #fff;
 }
 .menu .icon {
     border: 1px solid #5c5c5c;
@@ -2401,20 +2549,54 @@ Header
     text-align: center;
     width: 22px;
 }
+.nav .dropdown-menu {
+       list-style: outside none none;
+    margin: 0;
+    min-width: 100%;
+    padding: 0;
+    width: auto;
+
+}
+.dropdown-menu > li {
+    height: 35px;width:100%;list-style-image: url(data:0);
+}
+.dropdown-menu > li > a {
+    clear: both;
+    color: #5c5c5c;
+    display: block;
+    font-weight: 400;
+    line-height: 35px;
+    padding: 0 35px 0 15px;
+    white-space: nowrap;
+}
+.navbar-default li .dropdown-menu li a:hover {
+    background: #e0f3ff none repeat scroll 0 0;
+    color: #2991d6;
+    text-decoration: none;
+}
+.navbar-nav > li > .dropdown-menu {
+    border-radius: 0;}
+	.submenu-icon {
+    margin-right: 4px;
+}
+/*----------End Menu-----------*/
+/*----------Search-----------*/
 .search {
     float: right;
     margin-right: 5px;
     width: 20%;
 }
 .search .text-box {
-    background: #fff url("../img/icons/svg/") no-repeat scroll 95% center;
-    margin: 4px 0;
+    background: #fff url("../img/icons/svg/search.svg") no-repeat scroll 95% center / 20px auto;
+    margin: 4px 0;height:31px;
 }
+.mobile-search{display:none;}
+/*----------Breadcrum-----------*/
 .bradcrum-menu {
     height: 30px;
     margin-left: 19px;
     position: relative;
-    z-index: 9999;
+    z-index: 9;
 }
 .bradcrum-menu > ul {
     margin: 0;
