table grid changes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -277,7 +277,9 @@ ul.nav li.dropdown-submenu:hover .dropdown-menu {
 iPhone 6 Plump landscape · width: 736px 
 \*------------------------------------*/
 
-@media (max-width:736px) {}
+@media (max-width:736px) {
+.panel-block-heading{width: 60%;}
+}
 
 
 
@@ -322,6 +324,9 @@ iPhone 6 landscape · width: 600px
 .language {
     float: right;
 }
+.panel-block-heading {
+    width: 55%;
+}
 	}
 /*---------- End Table Grid-----------*/
 
@@ -342,7 +347,13 @@ iPhone 5 landscape · width: 568px
 		width: 100%;
 	}
 	.app-action-group{display:none;}
-	.mobile-action-grp-btn{display:block;}
+.mobile-action-grp-btn {
+    display: block;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
 	.mobile-action-grp-btn .app-action-group {
 		display: block;
 	}
@@ -350,6 +361,7 @@ iPhone 5 landscape · width: 568px
 	.grid-action-group{display:none;}
 	.pages-info {width: 100%;}
 	.page_record_options::before {background-color: #5c5c5c;}
+	
 /*---------- End Table Grid-----------*/
 }
 
@@ -383,6 +395,8 @@ iPhone 6 portrait · width: 375px
 
 @media (max-width:375px) {
 	.page_record_options::before {background-color: transparent;}
+	.page-record-options, .page-options, .page-total-records {    margin-bottom: 5px;}
+  
 }
 
 
