--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,46 @@ a.button:focus {
 .full-dropdown {
     width: 348px;
 }
+/*------- File upload button normal Disable -------*/
+
+.file .gui-file {
+    bottom: 0;
+    cursor: pointer;
+    height: 100%;
+    opacity: 0;
+    padding: 8px 10px;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    z-index: 11;
+}
+.section {
+    margin-bottom: 22px;
+}
+.field.prepend-icon.file {
+    display: inline-block;
+    left: 0;
+    position: relative;
+    top: 0;
+    vertical-align: top;
+    width: 100%;
+}
+.file {
+    display: block;
+    width: 100%;
+}
+.field {
+    display: block;
+    position: relative;
+}
+.field-icon {
+    left: 0;
+}
+.gui-input {
+    border: medium none;
+    line-height: 22px;
+    text-align: center;
+}
 /*------- Forms Element normal Disable -------*/
 
 .uie-btn.uie-primary-disable {
@@ -798,50 +838,42 @@ Dropdown
 /*------------------------------------*\
 Tooltip
 \*------------------------------------*/
-
 /**
  * Tooltip Styles
  */
-
 /* Base styles for the element that has a tooltip */
+
 [data-tooltip],
 .tooltip {
-  position: relative;
-  cursor: pointer;
+    position: relative;
+    cursor: pointer;
 }
-[data-tooltip]:hover::after, [data-tooltip]:hover::before {
+[data-tooltip]:hover::after,
+[data-tooltip]:hover::before {
     opacity: 1;
     visibility: visible;
 }
 /* Base styles for the entire tooltip */
+
 [data-tooltip]:before,
 [data-tooltip]:after,
 .tooltip:before,
 .tooltip:after {
-  position: absolute;
-  visibility: hidden;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -webkit-transition: 
-      opacity 0.2s ease-in-out,
-        visibility 0.2s ease-in-out,
-        -webkit-transform 0.2s fadeIn(0.71, 1.7, 0.77, 1.24);
-    -moz-transition:    
-        opacity 0.2s ease-in-out,
-        visibility 0.2s ease-in-out,
-        -moz-transform 0.2s fadeIn(0.71, 1.7, 0.77, 1.24);
-    transition:         
-        opacity 0.2s ease-in-out,
-        visibility 0.2s ease-in-out,
-        transform 0.2s fadeIn(0.71, 1.7, 0.77, 1.24);
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform:    translate3d(0, 0, 0);
-  transform:         translate3d(0, 0, 0);
-  pointer-events: none;
+    position: absolute;
+    visibility: hidden;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+    -webkit-transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, -webkit-transform 0.2s fadeIn(0.71, 1.7, 0.77, 1.24);
+    -moz-transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, -moz-transform 0.2s fadeIn(0.71, 1.7, 0.77, 1.24);
+    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, transform 0.2s fadeIn(0.71, 1.7, 0.77, 1.24);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    pointer-events: none;
 }
-
 /* Show the entire tooltip on hover and focus */
+
 [data-tooltip]:hover:before,
 [data-tooltip]:hover:after,
 [data-tooltip]:focus:before,
@@ -850,64 +882,61 @@ Tooltip
 .tooltip:hover:after,
 .tooltip:focus:before,
 .tooltip:focus:after {
-  visibility: visible;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
+    visibility: visible;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
 }
-
 /* Base styles for the tooltip's directional arrow */
+
 .tooltip:before,
 [data-tooltip]:before {
-  z-index: 1001;
-  border: 6px solid transparent;
-  background: transparent;
-  content: "";
+    z-index: 1001;
+    border: 6px solid transparent;
+    background: transparent;
+    content: "";
 }
-
 /* Base styles for the tooltip's content area */
+
 .tooltip:after,
 [data-tooltip]:after {
-  z-index: 1000;
-  padding: 8px;
-  width: 160px;
-  background-color: #000;
-  background-color: hsla(0, 0%, 20%, 0.9);
-  color: #fff;
-  content: attr(data-tooltip);
-  font-size: 14px;
-  line-height: 1.2;
+    z-index: 1000;
+    padding: 8px;
+    width: 160px;
+    background-color: #000;
+    background-color: hsla(0, 0%, 20%, 0.9);
+    color: #fff;
+    content: attr(data-tooltip);
+    font-size: 14px;
+    line-height: 1.2;
 }
-
 /* Directions */
-
 /* Top (default) */
+
 [data-tooltip]:before,
 [data-tooltip]:after,
 .tooltip:before,
 .tooltip:after,
 .tooltip-top:before,
 .tooltip-top:after {
-  bottom: 100%;
-  left: 50%;
+    bottom: 100%;
+    left: 50%;
 }
-
 [data-tooltip]:before,
 .tooltip:before,
 .tooltip-top:before {
-  margin-left: -6px;
-  margin-bottom: -12px;
-  border-top-color: #000;
-  border-top-color: hsla(0, 0%, 20%, 0.9);
+    margin-left: -6px;
+    margin-bottom: -12px;
+    border-top-color: #000;
+    border-top-color: hsla(0, 0%, 20%, 0.9);
 }
-
 /* Horizontally align top/bottom tooltips */
+
 [data-tooltip]:after,
 .tooltip:after,
 .tooltip-top:after {
-  margin-left: -80px;
+    margin-left: -80px;
 }
-
 [data-tooltip]:hover:before,
 [data-tooltip]:hover:after,
 [data-tooltip]:focus:before,
@@ -920,97 +949,91 @@ Tooltip
 .tooltip-top:hover:after,
 .tooltip-top:focus:before,
 .tooltip-top:focus:after {
-  -webkit-transform: translateY(-12px);
-  -moz-transform:    translateY(-12px);
-  transform:         translateY(-12px); 
+    -webkit-transform: translateY(-12px);
+    -moz-transform: translateY(-12px);
+    transform: translateY(-12px);
 }
-
 /* Left */
+
 .tooltip-left:before,
 .tooltip-left:after {
-  right: 100%;
-  bottom: 50%;
-  left: auto;
+    right: 100%;
+    bottom: 50%;
+    left: auto;
 }
-
 .tooltip-left:before {
-  margin-left: 0;
-  margin-right: -12px;
-  margin-bottom: 0;
-  border-top-color: transparent;
-  border-left-color: #000;
-  border-left-color: hsla(0, 0%, 20%, 0.9);
+    margin-left: 0;
+    margin-right: -12px;
+    margin-bottom: 0;
+    border-top-color: transparent;
+    border-left-color: #000;
+    border-left-color: hsla(0, 0%, 20%, 0.9);
 }
-
 .tooltip-left:hover:before,
 .tooltip-left:hover:after,
 .tooltip-left:focus:before,
 .tooltip-left:focus:after {
-  -webkit-transform: translateX(-12px);
-  -moz-transform:    translateX(-12px);
-  transform:         translateX(-12px); 
+    -webkit-transform: translateX(-12px);
+    -moz-transform: translateX(-12px);
+    transform: translateX(-12px);
 }
-
 /* Bottom */
+
 .tooltip-bottom:before,
 .tooltip-bottom:after {
-  top: 100%;
-  bottom: auto;
-  left: 50%;
+    top: 100%;
+    bottom: auto;
+    left: 50%;
 }
-
 .tooltip-bottom:before {
-  margin-top: -12px;
-  margin-bottom: 0;
-  border-top-color: transparent;
-  border-bottom-color: #000;
-  border-bottom-color: hsla(0, 0%, 20%, 0.9);
+    margin-top: -12px;
+    margin-bottom: 0;
+    border-top-color: transparent;
+    border-bottom-color: #000;
+    border-bottom-color: hsla(0, 0%, 20%, 0.9);
 }
-
 .tooltip-bottom:hover:before,
 .tooltip-bottom:hover:after,
 .tooltip-bottom:focus:before,
 .tooltip-bottom:focus:after {
-  -webkit-transform: translateY(12px);
-  -moz-transform:    translateY(12px);
-  transform:         translateY(12px); 
+    -webkit-transform: translateY(12px);
+    -moz-transform: translateY(12px);
+    transform: translateY(12px);
 }
-
 /* Right */
+
 .tooltip-right:before,
 .tooltip-right:after {
-  bottom: 50%;
-  left: 100%;
+    bottom: 50%;
+    left: 100%;
 }
-
 .tooltip-right:before {
-  margin-bottom: 0;
-  margin-left: -12px;
-  border-top-color: transparent;
-  border-right-color: #000;
-  border-right-color: hsla(0, 0%, 20%, 0.9);
+    margin-bottom: 0;
+    margin-left: -12px;
+    border-top-color: transparent;
+    border-right-color: #000;
+    border-right-color: hsla(0, 0%, 20%, 0.9);
 }
-
 .tooltip-right:hover:before,
 .tooltip-right:hover:after,
 .tooltip-right:focus:before,
 .tooltip-right:focus:after {
-  -webkit-transform: translateX(12px);
-  -moz-transform:    translateX(12px);
-  transform:         translateX(12px); 
+    -webkit-transform: translateX(12px);
+    -moz-transform: translateX(12px);
+    transform: translateX(12px);
 }
-
 /* Move directional arrows down a bit for left/right tooltips */
+
 .tooltip-left:before,
 .tooltip-right:before {
-  top: 3px;
+    top: 3px;
 }
-
 /* Vertically center tooltip content for left/right tooltips */
+
 .tooltip-left:after,
 .tooltip-right:after {
-  margin-left: 0;
-  margin-bottom: -16px;
+    margin-left: 0;
+    margin-bottom: -16px;
 }
 /*------------------------------------*\
 Accordion
@@ -1376,10 +1399,8 @@ Panel
 .panel-block-head {
     background-color: #F6F6F6;
     border: 1px solid #D8D8D8;
-    height: 38px;
 }
 .panel-block-icon {
-    border-right: 1px solid #D8D8D8;
     color: #120e5b;
     float: left;
     font-size: 16px;
@@ -1389,15 +1410,17 @@ Panel
     width: 37px;
 }
 .panel-block-heading {
-    color: #120E5B;
+    border-left: 1px solid #d8d8d8;
+    color: #120e5b;
     display: block;
     float: left;
     font-size: 15px;
     font-weight: bold;
-    line-height: 36px;
-    padding-left: 16px;
-    padding-right: 24px;
+    line-height: 24px;
+    min-height: 37px;
+    padding: 5px 24px 5px 16px;
     text-transform: uppercase;
+    width: 70%;
 }
 .panel-block-content {
     background-color: #fff;
@@ -1462,7 +1485,7 @@ Panel
     float: left;
     margin: 0 5px;
 }
-.page-options  select {
+.page-options select {
     border: 1px solid #D8D8D8;
     color: #120e5b;
     display: inline-block;
@@ -1472,9 +1495,12 @@ Panel
     text-align: center;
     width: auto
 }
-.page-record-options ,.page-options ,.page-total-records {
+.page-record-options,
+.page-options,
+.page-total-records {
     float: left;
-    margin-right: 15px;    padding: 12px 0;line-height:20px;
+    margin-right: 15px;
+    line-height: 20px;
 }
 .pagination-block {
     height: 45px;
@@ -1484,10 +1510,10 @@ Panel
     position: relative;
     float: left;
     width: auto;
-    padding: 0 10px;
+    padding: 13px 10px;
 }
-.page-options ,
-.page-record-options  {
+.page-options,
+.page-record-options {
     position: relative;
 }
 .page-options:before,
@@ -1498,11 +1524,11 @@ Panel
     height: 13px;
     position: absolute;
     right: -8px;
-    top: 17px;
+    top: 3px;
     width: 1px;
 }
-.page-options  .dropdown-list,
-.page-record-options  .dropdown-list {
+.page-options .dropdown-list,
+.page-record-options .dropdown-list {
     display: inline-block;
     font-size: 12px;
     height: 20px;
@@ -1510,52 +1536,55 @@ Panel
     padding: 0;
     float: left;
 }
-.page-options  .dropdown-list ul li,
-.page-record-options  .dropdown-list ul li {
+.page-options .dropdown-list ul li,
+.page-record-options .dropdown-list ul li {
     font-size: 12px;
     height: 19px;
     padding: 0 5px;
 }
-.page-options  .dropdown-list .selected-listitem,
-.page-record-options  .dropdown-list .selected-listitem {
+.page-options .dropdown-list .selected-listitem,
+.page-record-options .dropdown-list .selected-listitem {
     padding: 0 20px 0 5px;
     line-height: 16px;
     border: 1px solid #d8d8d8;
     height: 20px;
 }
-.page-options  .selected-listitem::before,
-.page-record-options  .selected-listitem::before {
+.page-options .selected-listitem::before,
+.page-record-options .selected-listitem::before {
     right: 4px;
-    top: 7px;
+    top: 8px;
     border-left: 4px solid #ffffff;
     border-right: 4px solid #ffffff;
     border-top: 4px solid #373374;
 }
-.page-options  .dropdown-list ul,
+.page-options .dropdown-list ul,
 .view .dropdown-list ul {
     top: 17px;
     width: 106%;
 }
-.page-options  > span,
-.page-record-options  > span {
+.page-options > span,
+.page-record-options > span {
     display: inline-block;
     float: left;
     line-height: 18px;
 }
-.page-options  {
+.page-options {
     min-width: 166px;
-    
 }
-.page-record-options  {
+.page-record-options {
     min-width: 120px;
-    }
+}
 .page-record-options .dropdown-list {
     margin: 0 5px;
 }
 .pages-info .dropdown-list {
     border: medium none;
 }
-
+.page-options a.disable {
+    background: #f6f6f6 none repeat scroll 0 0;
+    color: #c5c5c5;
+    cursor: default;
+}
 /*----------Grid Action Group-----------*/
 
 .grid-action-group {
@@ -1648,22 +1677,23 @@ Panel
 /*------------------------------------*\
 Alert message 
 \*------------------------------------*/
+
 .ui-alert {
+    border: 1px solid #eaeaea;
     border-radius: 0;
-   
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.15);
     margin-bottom: 20px;
     padding: 15px;
-   
 }
 .alert-icon {
     float: left;
     margin-right: 10px;
     text-align: center;
     vertical-align: middle;
-    width: 12%;
+    width: 34px;
 }
 .alert-icon span {
-    background-color: #d8d8d8;
+    background-color: #5c5c5c;
     border-radius: 50%;
     color: #fff;
     display: block;
@@ -1673,9 +1703,9 @@ Alert message
     text-align: center;
     width: 34px;
 }
-.alert-rext {
+.alert-text {
     float: left;
-    width: 78%;
+    width: 74%;
 }
 .close-icon {
     color: #120e5b;
@@ -1683,111 +1713,45 @@ Alert message
     padding: 10px 0;
     width: 6%;
 }
-
-.close-icon a ,.close-icon a:hover{
+.alert-text h3 {
+    font-weight: normal;
+}
+.alert-text p {
+    font-size: 14px;
+}
+.close-icon a,
+.close-icon a:hover {
     color: #120E5B;
     font-size: 20px;
     font-weight: bold;
     opacity: 0.8;
 }
-.close-icon a:hover{opacity: 1}
-
+.close-icon a:hover {
+    opacity: 1
+}
 /* Alert Success */
 
 .ui-alert-success {
     border: 1px solid #45b6b0;
 }
-.ui-alert-success .alert-icon span{background-color:green}
-
-
-.validations-ui-text {
-    display: inline-block;
-    color: #5c5c5c;
-    float: left;
-    width: 74%;
+.ui-alert-success .alert-icon span {
+    background-color: #45b6b0;
 }
-.validations-ui.alert-icon {
-    display: inline-block;
-}
+/*  Alert Error */
 
-
-.validations-ui .alert-icon i {
-    color: #ffffff;
-    font-size: 22px;
-    padding: 6px;
-}
-.validations-ui-text h3 {
-    font-size: 15px;
-    font-weight: normal;
-}
-.validations-ui-text p {
-    font-size: 12px;
-}
-
-.alert-er-bg-color {
+.ui-alert-error {
     border: 1px solid #ff0000;
 }
-.alert-er-bg-color .alert-icon {
-    background: rgb(255, 0, 0) none repeat scroll 0 0;
+.ui-alert-error .alert-icon span {
+    background-color: #ff0000;
 }
-.alert-wr-bg-color {
+/*  Alert Warning */
+
+.ui-alert-warning {
     border: 1px solid #feaa30;
 }
-.alert-wr-bg-color .alert-icon {
-    background: #feaa30;
-}
-.ui-alert-normal {
-    border: 1px solid rgb(234, 234, 234);
-    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.15);
-}
-.ui-alert-normal .alert-bg-color {
-    background: #5c5c5c none repeat scroll 0 0;
-}
-.error-info-icon {
-    background: red;
-    color: rgba(0, 0, 0, 0);
-    cursor: pointer;
-    position: absolute;
-    right: 14px;
-    top: 6px;
-}
-.error-msg::before {
-    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #ff0000;
-    border-style: solid solid solid dashed;
-    border-width: 6px 5px;
-    content: "";
-    left: -11px;
-    position: absolute;
-    top: 11px;
-    transform: rotate(-180deg);
-}
-.error-msg {
-    background: #ffffff none repeat scroll 0 0;
-    border: 1px solid #f24534;
-    display: block;
-    float: right;
-    margin-bottom: 5px;
-    max-width: 260px;
-    padding: 7px 15px;
-    position: absolute;
-    right: -266px;
-    top: 0;
-    width: 260px;
-    z-index: 999;
-}
-.error-msg.left-bottom {
-    left: 0;
-    top: 40px;
-}
-.error-msg.left-bottom::before {
-    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #ff0000;
-    border-style: solid solid solid dashed;
-    border-width: 6px 5px;
-    content: "";
-    left: 0;
-    position: absolute;
-    top: -12px;
-    transform: rotate(-92deg);
+.ui-alert-warning .alert-icon span {
+    background-color: #feaa30;
 }
 /*------------------------------------*\
 switch 
@@ -1798,7 +1762,7 @@ switch
     height: 31px;
     position: relative;
     width: 70px;
- line-height:29px;
+    line-height: 29px;
 }
 .switch-label {
     color: rgba(255, 255, 255, 0.35);
@@ -1828,7 +1792,6 @@ switch
     color: #ffffff;
     float: left;
     height: 31px;
-   
 }
 .switch-input:checked + .switch-label-on ~ .switch-selection {
     background: #5c5c5c none repeat scroll 0 0;
@@ -1836,7 +1799,7 @@ switch
     left: 34px;
 }
 .switch-selection {
-    background: #2991d6  none repeat scroll 0 0;
+    background: #2991d6 none repeat scroll 0 0;
     display: block;
     height: 29px;
     left: 0;
@@ -1999,7 +1962,6 @@ Forms Element
 .p-r-5 {
     padding: 0 5px 0 0;
 }
-
 .padding-right {
     padding: 0 2px 0 0;
 }
@@ -2283,7 +2245,8 @@ Header
     margin-top: 0;
     position: relative;
     width: 213px;
-    z-index: 999999; height: 70px;
+    z-index: 999999;
+    height: 70px;
 }
 .logo-fix-width a {
     display: inline-block;
@@ -2297,7 +2260,10 @@ Header
 }
 /*----------Menu-----------*/
 /* First Level */
-.navbar{margin-bottom:0;}
+
+.navbar {
+    margin-bottom: 0;
+}
 ul.nav li:hover > ul.dropdown-menu {
     display: block;
 }
@@ -2411,7 +2377,6 @@ ul.nav li:hover > ul.dropdown-menu {
 .navbar-default .navbar-nav > li.active a i {
     border: 1px solid #ffffff;
 }
-
 /* Second Level */
 
 .dropdown-submenu {
@@ -2432,7 +2397,6 @@ ul.nav li:hover > ul.dropdown-menu {
 .dropdown-submenu:hover>a:after {
     border-left-color: #555;
 }
-
 /* Third Level */
 
 .dropdown-submenu .dropdown-menu {
