Svg add for dashboard and sidebar html and responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -147,7 +147,88 @@ iPad portrait · width: 768px
     width: 96%;
 }
 .search{    display: none;}
+/* Sidebar */
+.left-panel li {
+    border: medium none;
+}
+.tooltip::after, [data-tooltip]::after {
+    display: none;
+}
+.tooltip-right::before {
+    left: 50%;
+    transform: rotate(89deg);
+}
+.tooltip-right:hover::before, .tooltip-right:hover::after, .tooltip-right:focus::before, .tooltip-right:focus::after {
+    display: none;
+}
+.left-panel{width:100%;}
+.left-panel li a {
+    color: #2991d6;
+    height: auto;
+    line-height: 20px;
+    padding-top: 48px;
+    text-align: center;
+    width: auto;
+}
+.left-panel li {
+    height: auto;
+}
+.left-panel ul li.active a {
+    color: #120e5b !important;
+}
+.left-panel li.active {
+    background-color: #fff;
+    text-align: center;
+    width: 100%;
+}
 
+
+.left-panel li {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+}
+.left-panel ul li.active a:hover, .left-panel ul li a:hover {
+    text-decoration: none;
+}
+.left-panel .owl-prev {
+    background: #d8d8d8 url("../images/left-panel-prv-arrow.png") no-repeat scroll center center;
+    color: rgba(0, 0, 0, 0);
+    height: 100%;
+    left: -10px;
+    position: absolute;
+    top: 0;
+    width: 15px;
+}
+.left-panel .owl-next {
+    background: #d8d8d8 url("../images/left-panel-next-arrow.png") no-repeat scroll center center;
+    color: rgba(0, 0, 0, 0);
+    height: 100%;
+    position: absolute;
+    right: -10px;
+    top: 0;
+    width: 15px;
+}
+.left-panel .owl-carousel .owl-wrapper-outer {
+    border-bottom: 1px solid #d8d8d8;
+    border-top: 1px solid #d8d8d8;
+}
+.left-panel li {
+    width: 100%;
+}
+
+.left-panel li {
+    border-right: 1px solid #d8d8d8;
+    height: 85px;
+    padding: 5px;
+	background-position: center 15px;
+    background-repeat: no-repeat;
+}
+.left-panel ul li a {
+    font-size: 14px;
+}
+.left-panel li:hover a{color:#fff;}
+.owl-buttons {
+    display: none;
+}
 }
 
 
@@ -267,6 +348,7 @@ ul.nav li.dropdown-submenu:hover .dropdown-menu {
     border-right: medium none;}
 	.nav li:last-child {
     border-bottom: medium none;}
+
    /*---------- End Menu-----------*/
 }
 
@@ -279,6 +361,7 @@ iPhone 6 Plump landscape · width: 736px
 
 @media (max-width:736px) {
 .panel-block-heading{width: 60%;}
+.left-panel li a{   font-size: 12px;line-height: 30px;  padding-top: 41px;}
 }
 
 
@@ -372,7 +455,12 @@ iPhone 6 Plump portrait · width: 414px
 \*------------------------------------*/
 
 @media (max-width:414px) {
-
+/* Sidebar */	
+.left-panel ul li a {
+    font-size: 12px;
+    line-height: 14px;
+	padding-top: 46px;
+}
 }
 
 
