commit changes by Jhalak on 06-01-2015

--- a/css/style.css
+++ b/css/style.css
@@ -1436,7 +1436,7 @@ Date and time Piker
     padding: 20px;
 }
 .text-box.hasDatepicker {
-    max-width: 300px;
+  /*  max-width: 300px;*/
 }
 .table-condensed {
     margin: auto;
