--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,6 @@ a.button:focus {
     width: 348px;
 }
 /*------- File upload button normal Disable -------*/
-
 .file .gui-file {
     bottom: 0;
     cursor: pointer;
@@ -373,12 +372,21 @@ a.button:focus {
     margin-bottom: 22px;
 }
 .field.prepend-icon.file {
+    border: 1px solid #d8d8d8;
     display: inline-block;
     left: 0;
+    line-height: 30px;
+    padding-left: 15px;
     position: relative;
     top: 0;
     vertical-align: top;
     width: 100%;
+}
+.uie-btn.uie-btn-primary.btn-sm.right {
+    border: medium none;
+    border-radius: 0;
+    float: right;
+    line-height: 25px;
 }
 .file {
     display: block;
@@ -390,11 +398,14 @@ a.button:focus {
 }
 .field-icon {
     left: 0;
+    line-height: 33px;
+    margin: 0 10px 0 0;
 }
 .gui-input {
     border: medium none;
+    font-size: 14px;
     line-height: 22px;
-    text-align: center;
+    text-align: left;
 }
 /*------- Forms Element normal Disable -------*/
 
@@ -2743,8 +2754,8 @@ Main Body
 Footer
 \*------------------------------------*/
 
-footer {
-  background: #474747 none repeat scroll 0 0;
+.footer {
+    background-color: #474747;
     bottom: 0;
     color: #ffffff;
     left: 0;
@@ -2753,7 +2764,7 @@ footer {
     right: 0;
     text-align: center;
     width: 100%;
+	font-size:13px;
 }
-
 
 
