--- a/css/style.css
+++ b/css/style.css
@@ -854,11 +854,11 @@ File upload button
     margin-bottom: 22px;
 }
 .field.prepend-icon.file {
-    border: 1px solid #d8d8d8;
+    border: medium none;
     display: inline-block;
     left: 0;
     line-height: 30px;
-    padding-left: 15px;
+    padding-left: 0;
     position: relative;
     top: 0;
     vertical-align: top;
@@ -879,15 +879,13 @@ File upload button
     left: 0;
 }
 .gui-input {
-    border: medium none;
+    border: 1px solid #d8d8d8;
+    height: 35px;
     line-height: 22px;
+    padding: 5px 8px;
     text-align: left;
+    width: 280px;
 }
-
-
-
-
-
 /*------------------------------------*\
 Tooltip
 \*------------------------------------*/
