--- a/css/style.css
+++ b/css/style.css
@@ -1451,6 +1451,7 @@ Panel
 .panel-block-head {
     background-color: #F6F6F6;
     border: 1px solid #D8D8D8;
+	height: 40px;
 }
 .panel-block-icon {
     color: #120e5b;
@@ -1961,8 +1962,8 @@ Table
     padding: 0;
     width: auto;
 }
-#table-grid.table-record {
-    height: 470px;
+.table-record {
+   
     padding: 0;
     width: 100%;
 }
@@ -2736,7 +2737,12 @@ Main Body
     height: 1640px;
     margin-left: 150px;
 }
-
+.right-panel {
+    margin-bottom: 30px;
+    margin-left: 80px;
+    margin-right: 20px;
+    padding-top: 20px;
+}
 /*------------------------------------*\
 Footer
 \*------------------------------------*/
