table grid changes add model popup

--- a/css/style.css
+++ b/css/style.css
@@ -706,17 +706,31 @@ Dropdown
     z-index: 100;
 }
 .dropdown-list ul li {
-    border-bottom: 1px solid #d8d8d8;
+    /*border-bottom: 1px solid #d8d8d8;
     color: #5c5c5c;
     cursor: pointer;
     display: block;
     font-size: 14px;
     height: 34px;
-    padding: 0 10px;
+    padding: 0 10px;*/
+	
+	 border-bottom: 1px solid #d8d8d8;
+    color: #5c5c5c;
+    cursor: pointer;
+    display: block;
+    font-size: 14px;
+    line-height: 21px;
+    padding: 7px 10px;
 }
 .dropdown-list .mCS-3d.mCSB_scrollTools .mCSB_buttonDown {
     background-position: 0 10px;
 }
+.pages-info .dropdown-list .mCS-3d.mCSB_scrollTools .mCSB_buttonDown {
+    background-position: -1px -1px;
+}
+.pages-info .mCS-3d.mCSB_scrollTools .mCSB_buttonDown {
+    background-position: 0 0;
+    bottom: 0;}
 .dropdown-list .mCSB_scrollTools a + .mCSB_draggerContainer {
     margin: 10px 0;
 }
@@ -739,6 +753,7 @@ Dropdown
 .check-btn-form-uie {
     margin: 5px 0 10px;
 }
+.page-record-options .dropdown-list ul{    left: 0; top: 19px;}
 /* Button Action Dropdown */
 
 .uie-dropdown-btn {
@@ -1441,7 +1456,7 @@ Application form action ablock
     padding: 10px 0;
 }
 .set-empty .checkbox {
-    margin: 7px 0 0;
+    margin:0;
 }
 /*------------------------------------*\
 Panel
@@ -1593,7 +1608,7 @@ Panel
 .page-record-options .dropdown-list ul li {
     font-size: 12px;
     height: 19px;
-    padding: 0 5px;
+    padding: 0 5px;line-height:16px;
 }
 .page-options .dropdown-list .selected-listitem,
 .page-record-options .dropdown-list .selected-listitem {
@@ -1601,6 +1616,7 @@ Panel
     line-height: 16px;
     border: 1px solid #d8d8d8;
     height: 20px;
+	width: 40px;
 }
 .page-options .selected-listitem::before,
 .page-record-options .selected-listitem::before {
@@ -1613,7 +1629,7 @@ Panel
 .page-options .dropdown-list ul,
 .view .dropdown-list ul {
     top: 17px;
-    width: 106%;
+   
 }
 .page-options > span,
 .page-record-options > span {
@@ -1909,7 +1925,80 @@ switch
     z-index: 1;
 }
 
+/*------------------------------------*\
+Model Dialog Box
+\*------------------------------------*/
+.modal-dialog {
+    left: 50%;
+    margin-left: -10px;
+    margin-top: -50px;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%) !important;
+       width: auto;
+}
+.modal-title {
+    color: #5c5c5c;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 1.42857;
+    margin: 0;
+	padding:10px;
+}
+.modal-title .icon {
+    margin-right: 6px;
+}
+.modal-content{  border-radius: 0;}
+.modal-header {
+    border-bottom: 1px solid #e5e5e5;
+    height: 40px;
+    padding: 0px;
+}
+.modal-header .close{
+ border-left: 1px solid #d8d8d8;
+    color: #120e5b;
+    display: block;
+    float: right;
+    line-height: 39px;
+    text-align: center;
+    width: 37px;
+	margin-top: 0;
+	opacity:1;
+	  text-shadow: none;}
+	.modal-header .close:hover {
+    background: #120e5b none repeat scroll 0 0;
+    color: #fff;
+  
+}
+#batch_update .modal-dialog {
+    width: 460px;
+}
+#batch_update .field-name {
+    float: left;
+    text-align: right;
+    width: 70px;
+}
 
+.modal-body {
+    padding: 15px 15px 5px;
+    position: relative;
+}
+.modal-content .form-btn-group.clearfix {
+    margin-bottom: 10px;
+   
+}
+.modal-dialog .uie-button .btn-icon i {
+    font-size: 18px;
+}
+#add-record .modal-dialog {
+    width: 820px;
+}
+.modal-body .field-name {
+    float: left;
+    text-align: right;
+    width: 80px;
+}
+.modal-body .form-btn-group{  margin-left: 80px;}
 
 
 /*------------------------------------*\
@@ -1966,6 +2055,7 @@ Table
    
     padding: 0;
     width: 100%;
+	max-height:400px;
 }
 .table-grid th:first-child span,
 .table-grid tr td:first-child {
@@ -2045,6 +2135,7 @@ Table
     margin-bottom: 5px;
     margin-top: -3px;
 }
+.table-record .mCSB_container_wrapper{position:relative;}
 /*------------------------------------*\
 Forms Element 
 \*------------------------------------*/
@@ -2738,8 +2829,7 @@ Main Body
     margin-left: 150px;
 }
 .right-panel {
-    margin-bottom: 30px;
-    margin-left: 80px;
+     margin-left: 80px;
     margin-right: 20px;
     padding-top: 20px;
 }
@@ -2761,3 +2851,4 @@ Footer
 }
 
 
+.mobile-sidebarmenu{display:none;}
