--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ Checkbox Radio Button
 \*------------------------------------*/
 
 .table-grid th .css-label {
-    background-image: url("../img/icons/checkbox.png");
+    background-image: url("../img/icons/icon-checkbox-heading.png");
 }
 .css-label {
     background-image: url("../img/icons/icon-checkbox.png");
@@ -1479,7 +1479,7 @@ Panel
 .panel-block-head {
     background-color: #F6F6F6;
     border: 1px solid #D8D8D8;
-	height: 40px;
+	  overflow: hidden;
 }
 .panel-block-icon {
     color: #120e5b;
@@ -1498,10 +1498,10 @@ Panel
     font-size: 15px;
     font-weight: bold;
     line-height: 24px;
-    min-height: 37px;
+    min-height: 39px;
     padding: 5px 24px 5px 16px;
     text-transform: uppercase;
-    width: 70%;
+    width: 68%;
 }
 .panel-block-content {
     background-color: #fff;
@@ -1510,6 +1510,9 @@ Panel
     border-right: 1px solid #D8D8D8;
     border-bottom: 1px solid #D8D8D8;
     overflow: hidden;
+}
+.panel-block {
+    padding-bottom: 10px;
 }
 /*---------- App Action Group -----------*/
 
@@ -1711,7 +1714,7 @@ Panel
     clear: both;
     position: absolute;
     right: -1px;
-    top: 36px;
+    top: 37px;
     z-index: 99;
 }
 .action-arrow {
@@ -1722,7 +1725,7 @@ Panel
     color: #120e5b;
     display: block;
     float: left;
-    line-height: 36px;
+    line-height: 37px;
     text-align: center;
     width: 37px;
 }
@@ -1837,11 +1840,12 @@ Alert message
 }
 /*  Alert Error Message   */
 .error-info-icon {
-   color: red;
+    color: #ff0000;
     cursor: pointer;
+    font-size: 19px;
     position: absolute;
-    right: 14px;
-    top: 6px;
+    right: 10px;
+    top: 7px;
 }
 .error-msg::before {
     border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #ff0000;
@@ -1858,25 +1862,37 @@ Alert message
     border-style: solid solid solid dashed;
     border-width: 6px 5px;
     content: "";
-    left: 118px;
+    left: 167px;
     position: absolute;
-    top: 11px;
+    top: 14px;
     transform: rotate(-1deg);
 }
 .error-msg.right-top {
-    left: 0;
-    max-width: 120px;
+    font-size: 13px;
+    left: -173px;
+    max-width: 168px;
     text-align: right;
+    top: -4px;
     width: 100%;
+    word-break: break-all;
+}
+.error-msg.right-top i {
+    bottom: 0;
+    position: absolute;
+    right: 2px;
+    top: 31%;
+ 
 }
 .error-msg {
     background: #ffffff none repeat scroll 0 0;
     border: 1px solid #f24534;
+    color: #5c5c5c;
     display: block;
     float: right;
+    font-size: 12px;
     margin-bottom: 5px;
     max-width: 260px;
-    padding: 7px 15px;
+    padding: 7px 13px 7px 8px;
     position: absolute;
     right: -266px;
     top: 0;
@@ -1885,6 +1901,7 @@ Alert message
 }
 .error-msg.left-bottom {
     left: 0;
+    max-width: 195px;
     top: 40px;
 }
 .error-msg.left-bottom::before {
@@ -2080,10 +2097,9 @@ Table
     width: auto;
 }
 .table-record {
-   
-    padding: 0;
+   padding: 0;
     width: 100%;
-	max-height:400px;
+	
 }
 .table-grid th:first-child span,
 .table-grid tr td:first-child {
@@ -2640,7 +2656,7 @@ ul.nav li:hover > ul.dropdown-menu {
     width: 20%;
 }
 .search .text-box {
-    background: #fff url("../img/icons/svg/search.svg") no-repeat scroll 95% center / 20px auto;
+    background: #fff url("../img/icons/svg/search.svg") no-repeat scroll 98% center / 20px auto;
     margin: 4px 0;
     height: 31px;
 }
