--- a/css/style.css
+++ b/css/style.css
@@ -2052,7 +2052,9 @@ Model Dialog Box
 /*------------------------------------*\
 Table
 \*------------------------------------*/
-
+.table-grid {
+    width: 100%;
+}
 .table-grid th:first-child {
     padding: 0 10px;
 }
